add docs for users
